--- a/app/src/main/res/layout/fragment_pass.xml
+++ b/app/src/main/res/layout/fragment_pass.xml
@@ -19,6 +19,17 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
+    <TextView
+        android:id="@+id/pass_score"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:textSize="24dp"
+        android:text="score"
+        app:layout_constraintTop_toBottomOf="@+id/pass_text"
+        />
+
     <Button
         android:id="@+id/apply_button"
         android:layout_width="wrap_content"
@@ -26,7 +37,7 @@
         android:text="접수하러 가기"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/pass_text"
+        app:layout_constraintTop_toBottomOf="@+id/pass_score"
         app:layout_constraintLeft_toLeftOf="parent"
         />
 
@@ -37,8 +48,19 @@
         android:text="홈으로 돌아가기"
         android:layout_marginTop="20dp"
         android:layout_marginRight="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/pass_text"
+        app:layout_constraintTop_toBottomOf="@+id/pass_score"
         app:layout_constraintRight_toRightOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/notice"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:textSize="15dp"
+        android:text="실제 필기시험은 총 40문제이며\n문제별로 배점이 다르니 주의하시기 바랍니다."
+        app:layout_constraintTop_toBottomOf="@+id/go_home_pass"
         />
 
 
